@@ -386,7 +386,7 @@
                                   <value>${test.level}</value>
                               </property>
                           </systemProperties>
-                          <argLine>-Duser.region=US -Duser.language=en -XX:MaxPermSize=256m</argLine>
+                          <argLine>-Duser.region=US -Duser.language=en</argLine>
                     </configuration>
 
                 </plugin>
@@ -1100,6 +1100,12 @@
                 <groupId>org.wildfly.core</groupId>
                 <artifactId>wildfly-cli</artifactId>
                 <version>${version.org.wildfly.core}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>sun.jdk</groupId>
+                        <artifactId>jconsole</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
